--- a/Sunshine/app/build.gradle
+++ b/Sunshine/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.0.0-beta3'
+    compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
 }
