--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="vn.tranthanhtu.sunshine">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MainAplication"
@@ -20,9 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.LoadDataCurrentDayWeather"/>
-        <service android:name=".services.LoadDataNextDayWeather"/>
-        <service android:name=".services.LoadLocationCityGPS"/>
+
+        <service android:name=".services.LoadDataCurrentDayWeather" />
+        <service android:name=".services.LoadDataNextDayWeather" />
+        <service android:name=".services.LoadLocationCityGPS" />
+
+        <activity android:name=".activitis.DetailActivity" />
+        <activity android:name=".activitis.SettingActivity"></activity>
     </application>
 
 </manifest>
