--- a/Sunshine/app/build.gradle
+++ b/Sunshine/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.0.0-beta3'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.0.0-beta3'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support:preference-v7:25.0.1'
     testCompile 'junit:junit:4.12'
 }
