--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="vn.tranthanhtu.sunshine">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +13,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activitis.MainActivity">
+        <activity
+            android:name=".activitis.WaitActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Forecast">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +30,13 @@
         <service android:name=".services.LoadLocationCityGPS" />
 
         <activity android:name=".activitis.DetailActivity" />
-        <activity android:name=".activitis.SettingActivity"></activity>
+        <activity android:name=".activitis.SettingActivity" />
+        <activity
+            android:name=".activitis.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.Forecast"
+            ></activity>
     </application>
 
 </manifest>
