--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="vn.tranthanhtu.sunshine">
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"/>
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:fullBackupContent="false"
         android:name=".MainAplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activitis.WaitActivity"
             android:label="@string/app_name"
@@ -25,9 +33,6 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.LoadDataCurrentDayWeather" />
-        <service android:name=".services.LoadDataNextDayWeather" />
-        <service android:name=".services.LoadLocationCityGPS" />
         <service android:name=".services.NotificationService"/>
 
         <activity android:name=".activitis.DetailActivity" />
@@ -36,7 +41,8 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Forecast" />
-        <activity android:name=".activitis.SettingActivity"></activity>
+        <activity android:name=".activitis.SettingActivity"
+            android:theme="@style/AppTheme.Forecast"/>
     </application>
 
 </manifest>
